finished desktop size

--- a/index.html
+++ b/index.html
@@ -1,14 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="ar" dir="rtl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SAICO</title>
-    <link rel="stylesheet" href="style/bootstrap.min.css">
-    <link rel="stylesheet" href="style/style.css">
-</head>
-<body>
-        
+    <link rel="stylesheet" href="style/bootstrap.min.css" />
+    <link rel="stylesheet" href="style/style.css" />
+  </head>
+  <body>
+    <div class="container d-flex flex-column align-items-center">
+      <div
+        class="navbar w-100 d-flex justify-content-center align-items-center"
+      >
+        <img src="assets/images/saico.png" alt="" />
+      </div>
+      <div class="box d-flex flex-column align-items-center">
+        <div class="button w-100">
+          <button class="close">
+            <img class="w-100" src="assets/images/close.png" alt="" />
+          </button>
+        </div>
+        <h3>تم إصدار وثيقة التأمين بنجاح وإرسالها لكم على البريد الإلكترونى</h3>
+        <h3>تستطيع الآن مشاركة الوثيقة والإطلاع عليها بأكثر من طريقة</h3>
+        <br />
+        <div class="contact w-50 d-flex justify-content-between">
+          <a href="https://www.google.com" target="_blank" class="child"
+            ><img class="w-100" src="assets/images/link.png" alt=""
+          /></a>
+          <a href="https://www.google.com" target="_blank" class="child"
+            ><img class="w-100" src="assets/images/mail.png" alt=""
+          /></a>
+          <a href="https://www.google.com" target="_blank" class="child"
+            ><img class="w-100" src="assets/images/sms.png" alt=""
+          /></a>
+          <a href="https://www.google.com" target="_blank" class="child"
+            ><img class="w-100" src="assets/images/whatsapp.png" alt=""
+          /></a>
+        </div>
+        <br /><br /><br />
+        <div class="download w-50 d-flex justify-content-center">
+          <a
+            href="https://www.google.com"
+            target="_blank"
+            class="child d-flex justify-content-end align-items-center"
+          >
+            <p>App Gallery</p>
+            <img src="assets/images/huawei.png" alt="" />
+          </a>
+
+          <a
+            href="https://www.google.com"
+            target="_blank"
+            class="child d-flex justify-content-end align-items-center"
+          >
+            <p>App Store</p>
+            <img src="assets/images/apple-logo.png" alt="" />
+          </a>
+
+          <a
+            href="https://www.google.com"
+            target="_blank"
+            class="child d-flex justify-content-end align-items-center"
+          >
+            <p>Google Play</p>
+            <img src="assets/images/google-play.png" alt="" />
+          </a>
+        </div>
+        <br /><br />
+        <div class="home w-25 d-flex flex-column align-items-center">
+          <a class="hme" href="https://google.com"
+            ><img src="assets/images/home.png" alt=""
+          /></a>
+          <a href="https://www.google.com">الرجوع للصفحة الأساسية</a>
+        </div>
+      </div>
+    </div>
     <script src="js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
