--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div
         class="navbar w-100 d-flex justify-content-center align-items-center"
       >
-        <img src="assets/images/saico.png" alt="" />
+        <img class="w-25" src="assets/images/saico.png" alt="" />
       </div>
       <div class="box d-flex flex-column align-items-center">
         <div class="button w-100">
@@ -21,7 +21,7 @@
           </button>
         </div>
         <h3>تم إصدار وثيقة التأمين بنجاح وإرسالها لكم على البريد الإلكترونى</h3>
-        <h3>تستطيع الآن مشاركة الوثيقة والإطلاع عليها بأكثر من طريقة</h3>
+        <h3>تستطيع الأن مشاركة الوثيقة والإطلاع عليها بأكثر من طريقة</h3>
         <br />
         <div class="contact w-50 d-flex justify-content-between">
           <a href="https://www.google.com" target="_blank" class="child"
